kubernetes/apps/flux-system/flux-instance/app/github/webhooks/allow-webhooks-from-gateway.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/master-standalone-strict/networkpolicy-networking-v1.json
# I thnk the allow-webhooks network policy created by flux only works for ingress and you need this network policy to get packets/flows from a gateway.
# See if this can be removed after recreating the cluster and moving to the flux operator.
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-webhooks-from-gateway
spec:
  podSelector:
    matchLabels:
      app: notification-controller
  ingress:
  - {}
  policyTypes:
  - Ingress
